
This file is maintained by Erwin Lansing <erwin@FreeBSD.org> and
copyrighted by the FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes.

All ports committers are allowed to commit to this file.

20070701:
AUTHOR: portmgr@FreeBSD.org
The following change was made to the ports infrastructure:

  * Virtual category 'kld' was added.  If the port installs kernel loadable
    modules, it should be included in this category.

20070524:
AUTHOR: portmgr@FreeBSD.org
The following changes were made to the ports infrastructure:

  * The 'make-deinstall-all' target now checks for moved ports.

  * The installation directories PORTEXAMPLES and PORTDATA are now defined.

  * The USE_MAKESELF knob is added for ports that use the makeself archiver.

  * The description of fetch-list was updated.  The targets fetch-required-list,
    fetch-url-list, and fetch-urlall-list were added.

  * 'make search' will also now search in ports/MOVED.

  * The default method for 'make update' is now portsnap.  Previously,
    you had to manually select one of 3 methods: SUP_UPDATE, CVS_UPDATE,
    or PORTSNAP_UPDATE.  The latter is now obsolete.

  * Several Makevar definitions have been moved to the pre-makefile section:
    DATADIR, DOCSDIR, ETCDIR, EXAMPLESDIR, WWWDIR.

20070403:
AUTHOR: portmgr@FreeBSD.org
The following changes were made to the ports infrastructure:

  * The default dependency of USE_GHOSTSCRIPT has been changed from
    ghostscript-gnu to ghostscript-gpl.  The WITH_GHOSTSCRIPT_GPL variable is
    now no-op.  New WITH_GHOSTSCRIPT_GNU variable was added.

  * bsd.tcl.mk was overhauled.  Most importantly, the semantics of USE_TCL* and
    USE_TK* variables was changed.  USE_TCL and USE_TK now implies both build
    and run dependencies, USE_TCL_RUN and USE_TK_BUILD variables were